 - #5679, Remove spurious COMMIT statements from sfcgal script
          (Sandro Santilli, Loïc Bartoletti)
 - #5680, Fix populate_topology_layer with standard_conforming_strings
          set to off (Sandro Santilli)
 - #5589, ST_3DDistance error for shared first point (Paul Ramsey)
 - #5686, ST_NumInteriorRings and Triangle crash (Paul Ramsey)


PostGIS 3.4.2
2024/02/08

* Bug Fixes *

 - #5633, Fix load, upgrade and usage with standard_conforming_strings
          set to off (Sandro Santilli, Regina Obe)
 - #5571, Memory over-allocation for narrow inputs (Paul Ramsey)
 - #5610, Regression fix: Allow Nan and infinity again
          in ST_SetPoint (Regina Obe)
 - #5627, #5647, Handling of EMPTY components in PiP check (Paul Ramsey)
 - #5629, Handling EMPTY components in repeated point removal (Paul Ramsey)
 - #5604, Handle distance between collections with empty elements (Paul Ramsey)
 - #5635, Handle NaN points in ST_Split (Regina Obe)
 - #5648, postgis_raster upgrade fails on PG16 (Ronan Dunklau)
 - #5646, Crash on collections with empty members (Paul Ramsey)
 - #5580, Handle empty collection components in 3d distance (Paul Ramsey)
 - #5639, ST_DFullyWithin line/poly error case (Paul Ramsey)
 - #5662, Change XML parsers to SAX2 (Paul Ramsey)


PostGIS 3.4.1
2023/11/19

* Bug Fixes *

 - #5541, Fix --without-gui configure switch (Chris Mayo)
 - #5558, Fix uninitialized variable in ST_AsMVTGeom (Sandro Santilli)
 - #5590, Fix script-based load of topology.sql (Sandro Santilli)
 - #5574, #5575, #5576, #5577, #5578, #5579, #5569
          Fix restore of postgis dumps since 2.1 (Sandro Santilli)
 - #5568, Improve robustness of topology face split handling (Sandro Santilli)
 - #5548, Fix box-filtered validity check of topologies with edge-less faces
          (Sandro Santilli)
 - #5485, Fix postgis script on OpenBSD (Sandro Santilli)
 - #5516, Fix upgrade with views using deprecated function, among which: