@@ -274,6 +274,7 @@
 					<member>James Marca</member>
 					<member>Jan Katins</member>
 					<member>Jason Smith</member>
+					<member>Jay Addison</member>
 					<member>Jeff Adams</member>
 					<member>Jelte Fennema</member>
 					<member>Jim Jones</member>
